tests are fixed